# server

./: .env  .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.github/: build.yml
.github/workflows/: build.yml
config/: base.yaml  dev.yaml
src/: application.rs  config.rs  errors.rs  ipc.rs  lib.rs  main.rs  servers_handler.rs  shutdown.rs  start.rs  state.rs  telemetry.rs
src/handlers/: info.rs  mod.rs  shutdown.rs  start.rs  stats.rs
src/protos/: request.proto  response.proto
