[package]
name = "ddnet_hander_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.91"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
rand = "0.8.5"

[dev-dependencies]
cargo-watch = "8.4.0"
