[package]
name = "ddnet_hander_server_v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
protobuf-codegen = "3.3.0"

[dependencies]
anyhow = "1.0.75"
config = "0.13.4"
dotenv = "0.15.0"
libc = "0.2.150"
protobuf = "3.3.0"
rand = "0.8.5"
serde = "1.0.195"
tokio = { version = "1.33.0", features = ["full"] }
tracing = "0.1.40"
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
